--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -119,7 +119,7 @@
   <string name="rdg_plan_title">Plan czytania</string>
   <string name="rdg_plan_selector_title">Wybierz plan czytania</string>
   <string name="rdg_plan_day">Dzień %s</string>
-  <string name="rdg_plan_set_start_date">Start 1 stycznia</string>
+  <string name="rdg_plan_set_start_jan1">Start 1 stycznia</string>
   <string name="done">Gotowe</string>
   <string name="reset">Reset</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
