--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -471,4 +471,5 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="rename_workspace_title">Give a name for this workspace</string>
     <string name="new_workspace_from_dialog">New</string>
     <string name="delete_workspace_from_dialog">Delete current</string>
+    <string name="history_title">History (%s)</string>
 </resources>
